hdaudio(4): Apply access checks to ioctl routines.

This way the permissions on /dev/hdaudioN actually do something.

Sort includes while here.

PR kern/60492: hdaudio(4): setconfig is allowed unprivileged